--- a/plugins/deploy/package.json
+++ b/plugins/deploy/package.json
@@ -7,7 +7,9 @@
     "icon": "plug",
     "description": "Description of deploy plugin."
   },
-  "dependencies": {},
+  "dependencies": {
+    "cross-fetch": "^3.1.4"
+  },
   "author": {
     "name": "A Strapi developer",
     "email": "",
